chore: port to 1.21.1